mitre/workload/generic/network-egress/cnp-application-layer-protocol-ftp-egress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-ftp-rule"
spec:
  endpointSelector:
    matchLabels: {}
  egress:
    - toPorts:
        - ports:
            - port: "20"
              protocol: TCP
            - port: "21"
              protocol: TCP
            - port: "990"
              protocol: TCP
            - port: "69"
              protocol: UDP
